2018-02-01 Philipp Klaus Krause <pkk AT spth.de>

	* index.php: long long is supported everywhere except for pic.

2016-11-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* index.php: Update Ben Shi's responsibility.

2016-06-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.6.0 release
	* previous.php: moved 3.5.0 release items

2016-06-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.6.0 RC2

2016-06-02 Philipp Klaus Krause <pkk AT spth.de>

	* index.php: Update standards and data types.

2016-05-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.6.0 RC1

2015-12-31 Philipp Klaus Krause <pkk AT spth.de>

	* links.php:
	  Reorganize link sections, add STM8 links.
	* index.php: Update my entry inthe "Who" section.

2015-12-31 Philipp Klaus Krause <pkk AT spth.de>

	* links.php:
	  Remove dead links.

2015-06-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: removed 3.4.0 dedication to Borut Razem

2015-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.5.0 release
	* previous.php: moved 3.4.0 release items

2015-06-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.5.0 RC2

2015-06-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.5.0 RC1

2015-03-03 Ben Shi <powerstudio1st AT 163 DOT com>

	* index.php: Modify Ben Shi's responsibility.

2014-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added Ben Shi to the "Who is SDCC?" list

2014-04-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: updated description to include TLCS-90 and STM8,
	  added News - sdcc 3.4.0 release
	* previous.php: moved 3.3.0 release items

2014-04-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added News - sdcc 3.4.0 RC3

2014-04-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* index.php: added dedication to Borut Razem
